# opengl_learning

./: CMakeLists.txt  README.md  build_release.bat  clean.sh  rebuild_debug.sh  rebuild_release.bat  run.sh  vcpkg.json
doc/: readme.md
res/shader/: basic.shader
src/: Application.cpp  CMakeLists.txt
src/basis/: defines.h  logger.h
src/window/: window.cpp  window.h
